test_files/negative/generation/negative.stats_strict
Not a PDF file
Parse error : syntax error at offset 622 [0x26e] !
